[build-system]
requires = ["maturin>=1.0,<2.0"]
build-backend = "maturin"

[tool.maturin]
# "extension-module" tells pyo3 we want to build an extension module (skips linking against libpython.so)
features = ["pyo3/extension-module"]
# Include additional files
include = [
    "biliup/web/public/**/*",
    "biliup/Danmaku/douyin_util/webmssdk.js",
]
#data = "biliup/web/public"
python-packages = ["biliup"]
manifest-path = "crates/stream-gears/Cargo.toml"

[project]
name = "biliup"
readme = "README.md"
authors = [{ name = "ForgQi" }]
description = "stream download and upload"
keywords = ["bilibili douyu huya"]
urls = { Homepage = "https://github.com/ForgQi/bilibiliupload" }
requires-python = ">= 3.9"
dependencies = [
    "yt-dlp >= 2025.7.21",
    "aiohttp[speedups] >= 3.9.5",
    "lxml >= 5.0.0",
    "protobuf >= 4.23.0",
    "quickjs >= 1.19.0",
    "Pillow >= 5.2.0",
    "requests >= 2.32.3",
    "streamlink >= 7.5.0",
    "rsa >= 4.6",
]
dynamic = ["version"]

[project.scripts]
biliup = "biliup.__main__:main"

#[tool.setuptools]
#license-files = ["LICENSE"]
#include-package-data = false

#[tool.setuptools.package-data]
#biliup = ["common/*.ini", "web/public/**", "web/public/build/*", "database/migration/*", "Danmaku/douyin_util/webmssdk.js"]
#
#[tool.setuptools.packages.find]
#include = ["biliup*"]
#namespaces = false
#
#[tool.setuptools.dynamic]
#version = { attr = "biliup.__version__" }
